# MPI-precompute

./: ._setup_env.sh  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.sh  clang_debug_wrapper.sh  clang_wrapper.sh  format_code.sh  process-pass-output.py  run.sh  setup_env.sh  setup_env.sh.in
IMB-ASYNC/: job_script.sh  rebuild.sh  submit_jobs.sh
IMB-ASYNC/job_scripts/: job_script.sh  parameters.txt  submit_jobs.sh
IMB-ASYNC/src_cpp/: Makefile  any.h  benchmark.h  benchmark_suite.h  benchmark_suite_base.h  benchmark_suites_collection.cpp  benchmark_suites_collection.h  imb.cpp  scope.cpp  scope.h  utils.h
IMB-ASYNC/src_cpp/ASYNC/: async.cpp  async_benchmark.h  async_suite.h
WholeProgramDevirtAnalysisPass/: CMakeLists.txt  WholeProgramDevirt.cpp  WholeProgramDevirtAnalysis.cpp  WholeProgramDevirtAnalysis.h
examples/: heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h
examples/2/: heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h
examples/3/: heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h
examples/very_simple/: test.c
examples/very_simple_multi_function/: plugin_data.json  test.c
mpi_compiler_assistance_matching_pass/: CMakeLists.txt  CompilerPassConstants.h  Precompute_insertion.cpp  Precompute_insertion.h  VtableManager.cpp  VtableManager.h  analysis_results.cpp  analysis_results.h  conflict_detection.cpp  conflict_detection.h  debug.cpp  debug.h  devirt_analysis.cpp  devirt_analysis.h  frontend_plugin_data.cpp  frontend_plugin_data.h  implementation_specific.cpp  implementation_specific.h  mpi_compiler_assistance_matching_pass.cpp  mpi_functions.cpp  mpi_functions.h  nc_settings.h  precalculation.h  precalculations.cpp  precompute_backend_funcs.cpp  precompute_funcs.cpp  precompute_funcs.h  ptr_info.cpp  ptr_info.h  replacement.cpp  replacement.h  taintedValue.h
openmpi-patch/: ._Makefile  .gitignore  CMakeLists.txt  Makefile  benchmark.c  benchmark_script.sh  build_patched_openmpi.sh  debug.c  debug.h  example.c  example_communicator.c  example_multiple_requests.c  finalization.c  finalization.h  globals.c  globals.h  handshake.c  handshake.h  initialization.c  initialization.h  interface.c  interface.h  low_level.h  mpi-internals.h  ompi_build.txt  one-sided-persistent.h  one-sided-persistent_impl.c  one-sided-persistent_two_sided_rendezvous.c  pack.c  pack.h  request_type.h  settings.h  start.c  start.h  test.c  test.h  wait.c  wait.h  with_ucx_active_messages.c
openmpi-patch/example/: CMakeLists.txt  example.c
openmpi-patch/patches/: ompi_makefile.patch  ompi_osc_ucx_component.patch  patch_ompi_header.sh
precompute_lib/: CMakeLists.txt  precompute.cpp  precompute.h
sample_apps/MUrB/: .gitmodules  CMakeLists.txt  LICENSE  MUrB_config.sh  README.md
sample_apps/MUrB/cmake/Modules/: FindGLFW.cmake  FindGLM.cmake
sample_apps/MUrB/doc/doxygen/: doxygen.conf
sample_apps/MUrB/doc/murb/: Makefile  moveUrBody.tex
sample_apps/MUrB/doc/murb/sections/: collisions.tex  equations.tex  execution.tex  implementations.tex  time.tex
sample_apps/MUrB/src/common/core/: Bodies.cpp  Bodies.h
sample_apps/MUrB/src/common/ogl/: OGLControl.cpp  OGLControl.h  OGLSpheresVisu.cpp  OGLSpheresVisu.h  OGLSpheresVisuGS.cpp  OGLSpheresVisuGS.h  OGLSpheresVisuInst.cpp  OGLSpheresVisuInst.h  OGLTools.cpp  OGLTools.h  SpheresVisu.h  SpheresVisuNo.cpp  SpheresVisuNo.h
sample_apps/MUrB/src/common/ogl/shaders/: fragment130.glsl  fragment150.glsl  fragment330.glsl  geometry150.glsl  geometry330.glsl  vertex130.glsl  vertex150.glsl  vertex330.glsl
sample_apps/MUrB/src/common/utils/: ArgumentsReader.cpp  ArgumentsReader.h  Perf.cpp  Perf.h  ToMPIDatatype.h
sample_apps/MUrB/src/murb/: main.cpp
sample_apps/MUrB/src/murb/core/: SimulationNBody.cpp  SimulationNBody.h
sample_apps/MUrB/src/murb/core/collision/: BodiesCollision.cpp  BodiesCollision.h  SimulationNBodyCollisionLocal.cpp  SimulationNBodyCollisionLocal.h
sample_apps/MUrB/src/murb/core/collision/v1/local/: SimulationNBodyCollisionV1.h  SimulationNBodyCollisionV1.hxx
sample_apps/MUrB/src/murb/core/collisionless/: SimulationNBodyLocal.cpp  SimulationNBodyLocal.h  SimulationNBodyMPI.cpp  SimulationNBodyMPI.h
sample_apps/MUrB/src/murb/core/collisionless/v1/local/: SimulationNBodyV1.h  SimulationNBodyV1.hxx  SimulationNBodyV1CB.h  SimulationNBodyV1CB.hxx  SimulationNBodyV1Intrinsics.h  SimulationNBodyV1Intrinsics.hxx  SimulationNBodyV1Vectors.h  SimulationNBodyV1Vectors.hxx
sample_apps/MUrB/src/murb/core/collisionless/v1/mpi/: SimulationNBodyMPIV1.h  SimulationNBodyMPIV1.hxx  SimulationNBodyMPIV1Intrinsics.h  SimulationNBodyMPIV1Intrinsics.hxx
sample_apps/MUrB/src/murb/core/collisionless/v2/local/: SimulationNBodyV2.h  SimulationNBodyV2.hxx  SimulationNBodyV2CB.h  SimulationNBodyV2CB.hxx  SimulationNBodyV2Intrinsics.h  SimulationNBodyV2Intrinsics.hxx  SimulationNBodyV2Vectors.h  SimulationNBodyV2Vectors.hxx
sample_apps/MUrB/src/murb/core/collisionless/v3/local/: SimulationNBodyV3.h  SimulationNBodyV3.hxx  SimulationNBodyV3Intrinsics.h  SimulationNBodyV3Intrinsics.hxx  SimulationNBodyV3IntrinsicsBH.h  SimulationNBodyV3IntrinsicsBH.hxx
sample_apps/MUrB/src/reader/: main.cpp
sample_apps/scripts/: SLURM_Header.sh  generate_plots.py  showcase_experiment.sh  submit_jobs.sh
scripts/: Build_Murb.txt  MUrB_config.sh  SLURM_Header.sh  generate_plots.py  job_script_body.sh  showcase_experiment.sh  submit_jobs.sh
scripts/MUrB/: MUrB.patch  MUrB_config.sh  build_MUrB.sh  parameters_MUrB.txt
tests/: CMakeLists.txt  run_test.sh  run_test_multi_TU.sh  run_test_single_TU.sh
tests/1/: heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h  plugin_data.json
tests/2/: Makefile  heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h  plugin_data.json
tests/3/: heated-plate-parallel_mpi.cpp  heated-plate-parallel_mpi.h  plugin_data.json
tests/multiTU/: CMakeLists.txt
tests/multiTU/01/: CMakeLists.txt  (+4 more)
tests/simple/: CMakeLists.txt  testcases.txt
tests/singleTU/: CMakeLists.txt
visualization/: cache_measurements_2022_10_03.csv  generate_plots.py
(+46 files in other folders)
